sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:15: error: 'while' expected but 'for' found.
    }for(i <- 0 to l-ecart-1)
     ^AlgCombSort:16: error: '(' expected but '}' found.
  }
  ^